--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yang-data-impl</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.1-Boron-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yang-parser-impl</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.1-Boron-SR1</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
